[project]
name = "rsp_queries"
license  = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Carrie Holt", email = "cholt@lco.global"},
    { name = "Tim Lister", email = "tlister@lco.global"},
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "pytest"
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter", # Clears output from Jupyter notebooks
    "pytest",
    "pytest-cov", # Used to report total code coverage
]

[project.urls]
"Source Code" = "https://github.com/lsst-sssc/rsp_queries"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
